syntax = "proto3";
package state.metadata.v1;
import "types/v1/types.proto";
import "state/ingress/v1/ingress.proto";
import "state/queues/v1/queues.proto";
import "registry/routing_table/v1/routing_table.proto";
import "registry/subnet/v1/subnet.proto";
import "registry/crypto/v1/crypto.proto";
import "google/protobuf/wrappers.proto";

message NodeTopology {
    string ip_address = 1;
    uint32 http_port = 2;
}

message SubnetTopologyEntry {
    types.v1.NodeId node_id = 1;
    NodeTopology node_topology = 2;
}

message SubnetTopology {
    repeated SubnetTopologyEntry nodes = 1;
    // The public key of the subnet (a DER-encoded BLS key, see
    // https://sdk.dfinity.org/docs/interface-spec/index.html#certification)
    bytes public_key = 2;
    registry.subnet.v1.SubnetType subnet_type = 3;
    registry.subnet.v1.SubnetFeatures subnet_features = 4;
    repeated registry.crypto.v1.EcdsaKeyId ecdsa_keys_held = 5;
}

message SubnetsEntry {
    types.v1.SubnetId subnet_id = 1;
    SubnetTopology subnet_topology = 2;
}

message EcdsaKeyEntry {
    reserved 1;
    registry.crypto.v1.EcdsaKeyId key_id = 3;
    repeated types.v1.SubnetId subnet_ids = 2;
}

message NetworkTopology {
    repeated SubnetsEntry subnets = 1;
    registry.routing_table.v1.RoutingTable routing_table = 2;
    types.v1.SubnetId nns_subnet_id = 3;
    registry.routing_table.v1.CanisterMigrations canister_migrations = 4;
    repeated EcdsaKeyEntry ecdsa_keys = 5;
}

message SetupInitialDkgContext {
    state.queues.v1.Request request = 1;
    repeated types.v1.NodeId nodes_in_subnet = 2;
    reserved 3;
    reserved "subnet_id";
    bytes target_id = 4;
    uint64 registry_version = 5;
}

message SetupInitialDkgContextTree {
    uint64 callback_id = 1;
    SetupInitialDkgContext context = 2;
}

message SignWithEcdsaContext {
    state.queues.v1.Request request = 1;
    bytes pseudo_random_id = 2;
    bytes message_hash = 3;
    reserved 4;
    reserved "derivation_path";
    uint64 batch_time = 5;
    repeated bytes derivation_path_vec = 6;
}

message SignWithEcdsaContextTree {
    uint64 callback_id = 1;
    SignWithEcdsaContext context = 2;
}

enum HttpMethod {
    HTTP_METHOD_UNSPECIFIED = 0;
    HTTP_METHOD_GET = 1;
}

message HttpHeader {
    string name = 1;
    string value = 2;
}

message CanisterHttpRequestContext {
    state.queues.v1.Request request = 1;
    string url = 2;
    google.protobuf.BytesValue body = 3;
    google.protobuf.StringValue transform_method_name = 4;
    HttpMethod http_method = 8;
    uint64 time = 6;
    repeated HttpHeader headers = 7;
    
    reserved 5;
}

message CanisterHttpRequestContextTree {
    uint64 callback_id = 1;
    CanisterHttpRequestContext context = 2;
}

message EcdsaDealingsContext {
    state.queues.v1.Request request = 1;
    reserved 2;
    repeated types.v1.NodeId nodes = 3;
    uint64 registry_version = 4;
    registry.crypto.v1.EcdsaKeyId key_id = 5;
}

message EcdsaDealingsContextTree {
    uint64 callback_id = 1;
    EcdsaDealingsContext context = 2;
}

message SubnetCallContextManager {
    uint64 next_callback_id = 1;
    reserved 2;
    reserved "contexts";
    repeated SetupInitialDkgContextTree setup_initial_dkg_contexts = 3;
    repeated SignWithEcdsaContextTree sign_with_ecdsa_contexts = 4;
    reserved 5;
    reserved "sign_with_mock_ecdsa_contexts";
    repeated CanisterHttpRequestContextTree canister_http_request_contexts = 6;
    repeated EcdsaDealingsContextTree ecdsa_dealings_contexts = 7;
}

message TimeOfLastAllocationCharge {
    uint64 time_of_last_allocation_charge_nanos = 1;
}

message SystemMetadata {
    uint64 generated_id_counter = 1;
    google.protobuf.BytesValue prev_state_hash = 2;
    uint64 batch_time_nanos = 3;
    ingress.v1.IngressHistoryState ingress_history = 4;
    repeated queues.v1.StreamEntry streams = 5;
    NetworkTopology network_topology = 6;
    types.v1.SubnetId own_subnet_id = 7;
    SubnetCallContextManager subnet_call_context_manager = 8;

    // Version of the StateSync protocol that should be used to compute
    // checkpoint manifests and transmit state.
    uint32 state_sync_version = 9;

    // Version of the certification protocol that should be used to
    // certify this state.
    uint32 certification_version = 10;

    uint64 heap_delta_estimate = 11;

    reserved 12;
    reserved "stable_memory_delta_estimate";

    registry.subnet.v1.SubnetFeatures own_subnet_features = 13;

    TimeOfLastAllocationCharge time_of_last_allocation_charge_nanos = 14;
}

message StableMemory {
    bytes memory = 1;
}
